--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "declaration": true,
     "module": "umd",
+    "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./dist",
     "preserveConstEnums": true,
