--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "chai": "^3.5.0",
     "event-stream": "^3.1.7",
     "gulp": "^3.8.8",
-    "gulp-if": "^1.2.4",
+    "gulp-if": "^2.0.1",
     "gulp-mocha": "^2.2.0",
     "gulp-sourcemaps": "^1.1.4",
     "gulp-tslint": "^5.0.0",
@@ -26,10 +26,10 @@
     "path-exists": "^3.0.0",
     "tslint": "^3.10.2",
     "typings": "^1.0.4",
-    "yargs": "^1.3.1"
+    "yargs": "^4.7.1"
   },
   "dependencies": {
-    "@spicypixel-private/core-kit-js": "^0.0.0",
+    "@spicypixel-private/core-kit-js": "~0.0.6",
     "bluebird": "^3.4.0",
     "mkdirp": "^0.5.1"
   },
