--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@spicypixel-private/core-kit-js": "~0.0.6",
     "bluebird": "^3.4.0",
-    "mkdirp": "^0.5.1"
+    "fs-extra": "^0.30.0"
   },
   "typings": {
     "definition": "./lib/index.d.ts"
