--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "author": "Spicy Pixel, Inc. (http://spicypixel.com)",
   "license": "MIT",
   "devDependencies": {
+  },
+  "dependencies": {
+    "@spicypixel-private/core-kit-js": ">0.0.6",
+    "bluebird": "^3.4.0",
+    "fs-extra": "^0.30.0",
     "chai": "^3.5.0",
     "event-stream": "^3.1.7",
     "gulp": "^3.8.8",
@@ -24,17 +29,11 @@
     "gulp-tslint": "^5.0.0",
     "gulp-typescript": "^2.0.0",
     "gulp-util": "^3.0.1",
-    "jshint-path-reporter": "^0.1.3",
     "mocha": "^2.5.2",
     "path-exists": "^3.0.0",
     "tslint": "^3.10.2",
     "typings": "^1.0.4",
     "yargs": "^4.7.1"
-  },
-  "dependencies": {
-    "@spicypixel-private/core-kit-js": ">0.0.6",
-    "bluebird": "^3.4.0",
-    "fs-extra": "^0.30.0"
   },
   "typings": {
     "definition": "./lib/index.d.ts"
