--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
 cache:
   paths:
     - node_modules/
-  
+
 build:
   script:
     - npm prune
+    - npm update
     - npm install
     - node node_modules/.bin/gulp test
