--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "registry": "http://npm.private:4873"
   },
   "scripts": {
-    "postinstall": "gulp build",
+    "prepublish": "gulp clean && gulp test",
+    "clean": "gulp clean",
     "build": "gulp build",
+    "rebuild": "gulp rebuild",
     "test": "gulp test",
     "mocha": "mocha"
   },
