--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,22 @@
+# Ignore IDEs
 .vscode/
 .idea/
+
+# Ignore bower (if any) 
 bower_components/
-/lib/
+
+# Ignore source
+/src/
+typings/
+
+# Ignore tests
 /test/
 test-output/
+
+# Ignore build instructions
+.babelrc
+.gitlab-ci.yml
+tsconfig.json
+tslint.json
+typings.json
+gulpfile.babel.js
