--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "registry": "http://npm.private:4873"
   },
   "scripts": {
-    "prepublish": "gulp clean && gulp build && gulp test",
+    "prepublish": "gulp clean && gulp test",
     "clean": "gulp clean",
     "build": "gulp build",
     "rebuild": "gulp rebuild",
