--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@spicypixel-private/unity-kit-js",
   "version": "0.0.14",
-  "description": "Spicy Pixel Unity Kit for JS",
+  "description": "Spicy Pixel Unity Kit JS",
   "main": "./lib/index.js",
   "publishConfig": {
     "registry": "http://npm.private:4873"
