--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "test": "gulp test",
     "mocha": "mocha"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/spicypixel/unity-kit-js.git"
+  },
   "author": "Spicy Pixel, Inc. (http://spicypixel.com)",
   "license": "MIT",
   "devDependencies": {},
