--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.17",
   "description": "Spicy Pixel Unity Kit JS",
   "main": "./lib/index.js",
-  "typings": {
-    "definition": "./lib/index.d.ts"
-  },
+  "typings": "./lib/index.d.ts",
   "scripts": {
     "prepublish": "gulp clean && gulp test",
     "clean": "gulp clean",
@@ -24,11 +22,7 @@
   "dependencies": {
     "@spicypixel/build-kit-js": ">=0.0.14",
     "@spicypixel/core-kit-js": ">=0.0.10",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
     "gulp": "^3.8.8",
-    "gulp-util": "^3.0.1",
-    "mocha": "^2.5.2",
-    "typings": "^1.0.4"
+    "gulp-util": "^3.0.1"
   }
 }
