--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,4 @@
-cache:
-  paths:
-    - node_modules/
-
 build:
   script:
-    - npm prune
-    - npm update
-    - npm install
+    - yarn install
     - node node_modules/.bin/gulp test
