--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "rootDir": "./src",
     "sourceRoot": "../src",
     "sourceMap": true,
-    "target": "es6"
+    "target": "esnext"
   },
   "exclude": [
     "gulpfile.ts",
