--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
   "scripts": {
-    "prepublish": "gulp clean && gulp test",
+    "prepublishOnly": "gulp clean && gulp test",
+    "install": "gulp build",
     "clean": "gulp clean",
     "build": "gulp build",
     "rebuild": "gulp rebuild",
